--- a/views/authfailure.ejs
+++ b/views/authfailure.ejs
@@ -10,9 +10,9 @@
            <div class="text-center mt-4">
                <img class="img-fluid p-4" src="images/401.svg" alt="">
                <p class="lead">Access to this resource is denied.</p>
-               <a class="text-arrow-icon" href="dashboard-1.html">
+               <a class="text-arrow-icon" href="/">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-left ms-0 me-1"><line x1="19" y1="12" x2="5" y2="12"></line><polyline points="12 19 5 12 12 5"></polyline></svg>
-                    Return to Dashboard
+                    Return to Login
                </a>
             </div>
         </div>
